css/style.css
body {
    margin: 0 auto;
    max-width: 1000px;
    font-family: sans-serif;
}

p {
    margin: 4px 0;
}
/* Navibar */

.navbar {
    display: flex;
    background: linear-gradient(90deg, #0A1A3A, #1E3A8A);
    justify-content: space-between;
}

.navbar__logo {
    height: 60px;
    margin: 0;
    padding: 16px;
}

.navbar__links {
    display: flex;
    gap: 16px;
    list-style: none;
    margin: 0;
    padding: 32px;
    font-weight: bold;
    
}

.navbar__links a:hover {
    color: #fbc541;
    cursor: pointer;
}

a {
    text-decoration: none;
    color: #094fe5;
}

a:visited {
    color: #094fe5;
}

/* Hero configurations */

.hero {
    text-align: center;
    font-size: 1.2rem;
    background-image: url(../assets/images/background.jpg);
    background-size: 1000px;
    padding: 16px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);}

.hero__button {
    margin: 0;
    padding: 2px 20px;
    font-weight: bold;
}


/* Cards layout configuration */

.cards {
    display: grid;
    gap: 10px;
    grid-template-columns: repeat(auto-fit,minmax(200px, 1fr));
     background-image: url(../assets/images/background.jpg);
    background-size: cover;
    background-position: center;
    padding: 16px;
}

.card {
    margin: 0 auto;
    width: 200px;
    border: solid black 1px;
    border-radius: 15px;
    text-align: center;
    transition: 0.3s;
    border: none;
    background: linear-gradient(90deg, #bec0c2 0%, #8e8d8d 100%);
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    color: #022216; 
}

.card--pro {
  background: linear-gradient(90deg, #FCF6BA 0%,  #BF953F 100%);
  color: #660033;
}

.card--enterprise {
    background: linear-gradient(90deg, #d3d6d8 0%, #58949c 100%);
    color: #4a4a4a;
}

.card__title {
    font-size: 1.5rem;
    margin: 0;
    padding: 16px 6px 0px 6px;
}

.card__description {
    margin: 0;
    padding: 16px 16px;
}

.card:hover {
    transform: translateY(-5px);
}

.about-us {
    background-image: url(../assets/images/background.jpg);
}

.about-us__text {
    text-align: justify;
    font-size: 1.2rem;
    padding: 16px;
    
}

.contact-links {
    text-align: center;
}

.github__button {
    height: 200px;
    margin: 0;
    padding: 16px;
}

.linkedin__button {
    height: 200px;
    margin: 0;
    padding: 16px;
}

/* footer configuration */

.footer {
    background: linear-gradient(90deg, #0A1A3A, #1E3A8A);
    margin-top: 16px;
    padding: 16px;
    text-align: center;
    color: white;
}

